# MLE-Project

./: .gitignore  README.md  config.py  main.py  mlflow.db  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
data/database/: mlproject.db
data/raw/: cover_letter_uzair_ahmed.docx
notebooks/: eda.ipynb
src/: config.py
src/data_ingestion/: data_ingestion.py
src/data_transforamtion/: data_transforamtion.py
src/data_validation/: data_validation.py
src/exception/: exception.py
src/logger/: logger.py
src/model_evaluation/: __init__.py  model_evaluation.py
src/model_training/: hyperparameter-tuning.py  model_train.py
src/pipeline/: training_pipeline.py
tests/: __init__.py  conftest.py  test_config.py  test_data_ingestion.py  test_data_transforamtion.py  test_data_validation.py  test_exception.py  test_logger.py  test_model_evaluation.py  test_training_pipeline.py
