[project]
name = "mle-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.2",
    "matplotlib>=3.11.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
[tool.setuptools.packages.find]
where = ["src"]
